# Multi-Material-Shape-Optimization-for-Bending-and-Torsion-of-Rods

./: CMakeLists.txt  README.md  README.txt  default1.cfg  edge.hpp  export.cpp  main.cpp  mesh.cpp  mesh.hpp  names.h  pde.cpp  pde.hpp  tmv.hpp  tri.hpp  utils.hpp  vertex.hpp
